Fix z-index of promo spacer so it placed over the carousel dots

--- a/src/components/PromoSpacer/PromoSpacer.scss
+++ b/src/components/PromoSpacer/PromoSpacer.scss
@@ -2,7 +2,7 @@
 
 .promo-spacer {
     position: relative;
-    z-index: 0;
+    z-index: $z-index-4;
     margin-bottom: 7px;
     width: 100%;
     height: 24px;
